# touchdown

./: .env.example  .env.sample  .gitignore  Dockerfile.production  README.md  docker-compose.yml  pyproject.toml
app/: clip_extractor.py  config.py  downloader.py  final_highlight_creator.py  main.py  types.py  video_processor.py
app/processor/: highlight_analyzer.py  highlight_extractor.py  models.py  transcript_fetcher.py
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: health.py  highlights.py  videos.py
backend/app/core/: config.py  database.py  websocket.py
backend/app/models/: __init__.py  highlight.py  transcript.py  video.py
backend/app/schemas/: highlight.py  video.py
backend/app/services/: ai_analyzer.py  video_processor.py
backend/app/tasks/: video_tasks.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: HighlightEditor.tsx  ProcessingStatus.tsx  UrlInput.tsx  VideoUpload.tsx
frontend/frontend/: package-lock.json
frontend/lib/: api.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: processed-videos-list.tsx  video-detail-view.tsx  (+1 more)
output/886c5c363d92ebac03a8055ec421d24a/: clips.json  metadata.json
output/b66f4be87cdffb131362dd6ab3bc5543/: clips.json  metadata.json
output/f64319bcd756f8efdc6a678bacb69af6/: clips.json  metadata.json
src/touchdown/: __init__.py  __main__.py  highlight_analyzer.py  highlight_extractor.py  models.py  transcript_fetcher.py
(+3 files in other folders)
