[project]
name = "touchdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ankur Rustagi", email = "arustag@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.scripts]
touchdown = "touchdown:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
